cg-cockpit-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cg-cockpit
spec:
  selector:
    matchLabels:
      app: cg-cockpit # Label selector that determines which Pods belong to the StatefulSet
                 # Must match spec: template: metadata: labels
  serviceName: "cg-cockpit"
  replicas: 1
  template:
    metadata:
      labels:
        app: cg-cockpit # Pod template's label selector
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: cg-cockpit1
        image: amitca71/gke-cockpit:latest
        ports:
        - containerPort: 80
          name: cg-cockpit
        volumeMounts:
        - name: www
          mountPath: /var/www/html/storage
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
