cg-cokpit-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: cg-cockpit
    serviceName: cg-cockpit
  name: cg-cockpit
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30333
    name: cg-cockpit
  selector:
    app: cg-cockpit
status:
  loadBalancer: {}
